--- a/META.yml
+++ b/META.yml
@@ -3,39 +3,46 @@ abstract: 'Templating using pure Perl code'
 author:
   - 'Wolfgang Kinkeldei <wolfgang@kinkeldei.de>'
 build_requires:
+  Catalyst: 0
+  Catalyst::Runtime: 0
   Catalyst::Test: 0
-  ExtUtils::MakeMaker: 6.42
+  FindBin: 0
+  Path::Class: 0
   Test::Exception: 0
   Test::More: 0
+  parent: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.91'
+  ExtUtils::MakeMaker: 6.31
+generated_by: 'Dist::Zilla version 2.100880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Catalyst-View-ByCode
-no_index:
-  directory:
-    - inc
-    - t
 requires:
+  B::Hooks::EndOfScope: 0
+  Catalyst::Component::ApplicationAttribute: 0
   Catalyst::Runtime: 5.80
+  Catalyst::Utils: 0
+  Catalyst::View: 0
   Devel::Declare: 0.005007
+  Exporter: 0
+  File::Spec: 0
+  FindBin: 1.49
   HTML::Entities: 1.35
   HTML::Tagset: 3.10
   List::Util: 1.21
   MIME::Base64: 3.07
-  Moose: 0
-  MooseX::AttributeHelpers: 0
+  Moose: 1.0
+  Moose::Util::TypeConstraints: 0
+  MooseX::AttributeHelpers: 0.23
+  Path::Class::File: 0
   Test::Builder: 0.86
   Test::Builder::Tester: 1.18
+  Test::Exception: 0.27
   Test::Harness: 3.14
   Test::More: 0.86
   UUID::Random: 0.04
   YAML: 0.68
-  perl: 5.8.0
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.09
+  overload: 0
+version: 0.10
