--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Wolfgang Kinkeldei <wolfgang@kinkeldei.de>'
 build_requires:
   Catalyst: 0
+  Catalyst::Controller: 0
   Catalyst::Runtime: 0
   Catalyst::Test: 0
   FindBin: 0
@@ -13,12 +14,13 @@ build_requires:
   parent: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
-generated_by: 'Dist::Zilla version 2.100880'
+generated_by: 'Dist::Zilla version 2.100991'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Catalyst-View-ByCode
+recommends: {}
 requires:
   B::Hooks::EndOfScope: 0
   Catalyst::Component::ApplicationAttribute: 0
@@ -45,4 +47,4 @@ requires:
   UUID::Random: 0.04
   YAML: 0.68
   overload: 0
-version: 0.10
+version: 0.11
