--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
 name    = Catalyst-View-ByCode
-version = 0.11
+version = 0.12
 author  = Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 license = Perl_5
 copyright_holder = Wolfgang Kinkeldei
 
-repository = http://github.com/wki/Catalyst-View-ByCode.git
+repository = http://github.com/wki/Catalyst-View-ByCode
 
 [@Classic]
 
