--- a/META.yml
+++ b/META.yml
@@ -2,34 +2,19 @@
 abstract: 'Templating using pure Perl code'
 author:
   - 'Wolfgang Kinkeldei <wolfgang@kinkeldei.de>'
-build_requires:
-  Catalyst: 0
-  Catalyst::Controller: 0
-  Catalyst::Runtime: 0
-  Catalyst::Test: 0
-  FindBin: 0
-  Path::Class: 0
-  Test::Exception: 0
-  Test::More: 0
-  parent: 0
+build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300003, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Catalyst-View-ByCode
 requires:
-  B::Hooks::EndOfScope: 0
-  Catalyst::Component::ApplicationAttribute: 0
   Catalyst::Runtime: 5.80
-  Catalyst::Utils: 0
-  Catalyst::View: 0
-  Devel::Declare: 0.006008
-  Exporter: 0
-  File::Spec: 0
+  Devel::Declare: 0.005007
   FindBin: 1.49
   HTML::Entities: 1.35
   HTML::Tagset: 3.10
@@ -37,8 +22,6 @@ requires:
   MIME::Base64: 3.07
   Moose: 1.0
   MooseX::AttributeHelpers: 0.23
-  Path::Class::File: 0
-  Scalar::Util: 0
   Test::Builder: 0.86
   Test::Builder::Tester: 1.18
   Test::Exception: 0.27
@@ -46,7 +29,4 @@ requires:
   Test::More: 0.86
   UUID::Random: 0.04
   YAML: 0.68
-  base: 0
-  strict: 0
-  warnings: 0
-version: 0.17
+version: 0.18
